--- a/index.html
+++ b/index.html
@@ -554,12 +554,12 @@
                     </ul>
                   </div>
                   <div class="socials">
-                    <!-- <ul>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                    <ul>
+                       <li> <a href="img/CV.pdf" download="newfilename"></i>Download for CV</a></i></span></a></li>
+                      <!-- <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
                       <li><a href=""><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li>
-                    </ul> -->
+                      <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li> -->
+                    </ul>
                   </div>
                 </div>
               </div>
