--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                   </div>
                   <div class="socials">
                     <ul>
-                       <li> <a href="img/CV.pdf" download="newfilename"></i>Download for CV</a></i></span></a></li>
+                       <li> <a href="img/CV.pdf" download="ozlemCV"></i>Download for CV</a></i></span></a></li>
                       <!-- <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
                       <li><a href=""><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
                       <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li> -->
